# catalog-python-client

./: README.md  _helpers.py  create_mapproxy_config.py  pyproject.toml  requirements.txt  update_verniquet_records.py
api_wrapper/: login.py
fixtures/: upload_json_response.json
geonetwork_resources/api_wrapper/: batch_edit.py  config.py  dataset.py  datasets_upload.py  delete_records.py  geonetwork.py  helpers.py  xml_composers.py  yaml_to_xml.py
geonetwork_resources/api_wrapper/xmltemplates/: dataset_iso19115.xml
geonetwork_resources/cli/: delete.py  edit.py  parse.py  update.py  upload.py
soduco_geonetwork/api_wrapper/: config.py  dataset.py  geonetwork.py  helpers.py  xml_composers.py  yaml_to_xml.py
soduco_geonetwork/api_wrapper/xmltemplates/: dataset_iso19115.xml  test_28.xml  test_template_from_doc_latest_iso.xml
soduco_geonetwork/cli/: cli.py  delete.py  parse.py  update.py  upload.py
soduco_geonetwork/xml/partials/: abstract.xml  associatedresource.xml  distributionformat.xml  distributioninfo.xml  events.xml  extent.xml  geoextent.xml  identification.xml  identifier.xml  individuals.xml  keywords.xml  onlineresources.xml  organisations.xml  overview.xml  partyidentifier.xml  presentationform.xml  processstep.xml  processstepoutput.xml  processstepsource.xml  resourcelineage.xml  scope.xml  spatialresolution.xml  temporalextent.xml
tests/: datasets_delete.py  datasets_update.py  datasets_upload.py  package_import.py  test_cli.py  upload_test_v2.py
tests/fixtures/: annotation_verniquet_bnf_28.json  catalog_xml_example.xml  instance.yaml
