[tool.poetry]
name = "soduco_geonetwork"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pydantic = "^1.10.2"
PyYAML = "^6.0"
python-dotenv = "^0.21.0"
click = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
parse_document = "geonetwork_resources.cli.parse:parse"
upload_records = "geonetwork_resources.cli.upload:upload"
update_records = "geonetwork_resources.cli.update:update"
update_postponed_values = "geonetwork_resources.cli.update:update_postponed_values"
delete_records = "geonetwork_resources.cli.delete:delete"
