[tool.poetry]
name = "soduco_geonetwork"
version = "0.1.0a"
description = "A python wrapper to use Geonetwork API"
license = "LGPL-3.0-or-later"
authors = [
    "Dumenieu Bertrand <bertrand.dumenieu@ehess.fr>",
    "Hersent Melvin <melvin.hersent@ign.fr>",
    "Perret Julien <julien.perret@ign.fr>"
]
readme = "README.md"
keywords = ["Geonetwork", "API"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pydantic = "^1.10.2"
PyYAML = "^6.0"
python-dotenv = "^0.21.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
cli-test-helpers = "^3.1.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
soduco_geonetwork_cli = "soduco_geonetwork.cli.cli:cli"
